--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://timesone.me/"
+baseURL = "http://bakubay.github.io"
 languageCode = "en-us"
 title = "Gasa Corner"
 author = "gbaku"
